--- a/K8s-deployment.yaml
+++ b/K8s-deployment.yaml
@@ -15,8 +15,9 @@ spec:
       containers:
         - name: flask-container
           image: flask-app:latest
+          imagePullPolicy: Never
           ports:
-          - containerPort: 5000
+            - containerPort: 5000
 ---
 apiVersion: v1
 kind: Service
@@ -26,7 +27,7 @@ spec:
   selector:
     app: flask
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 5000
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
   type: NodePort
